[gd_scene load_steps=9 format=3 uid="uid://dte83jcn2qj3x"]

[ext_resource type="FontFile" uid="uid://caw5hde3doeyx" path="res://Assets/Fonts/argentum-sans.semibold.ttf" id="1_73ka4"]
[ext_resource type="Script" uid="uid://b521oo4afue0b" path="res://Scenes/my_farm_container.gd" id="1_irsjt"]
[ext_resource type="Texture2D" uid="uid://dfj1k8wexi7w" path="res://Assets/Icons/plus_icon.png" id="2_irsjt"]
[ext_resource type="FontFile" uid="uid://b5ofmvuwbvdxo" path="res://Assets/Fonts/argentum-sans.black.ttf" id="3_egf7y"]
[ext_resource type="Script" uid="uid://bcnyg4qos0dr7" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="4_0hq3x"]
[ext_resource type="Script" uid="uid://mr2fibppbyip" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="5_sb4hn"]

[sub_resource type="Resource" id="Resource_irsjt"]
script = ExtResource("5_sb4hn")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_egf7y"]
script = ExtResource("5_sb4hn")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[node name="MyFarmContainer" type="VBoxContainer"]
custom_minimum_size = Vector2(0, 719)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_irsjt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="CreateFarmButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("1_73ka4")
theme_override_font_sizes/font_size = 15
text = "CREATE FARM"
icon = ExtResource("2_irsjt")
flat = true
expand_icon = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("3_egf7y")
theme_override_font_sizes/font_size = 30
text = "MY FARMS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer3"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="SmoothScrollContainer" type="ScrollContainer" parent="HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("4_0hq3x")
wheel_scroll_damper = SubResource("Resource_irsjt")
dragging_scroll_damper = SubResource("Resource_egf7y")
metadata/_custom_type_script = "uid://bcnyg4qos0dr7"

[node name="FarmContainer" type="GridContainer" parent="HBoxContainer3/SmoothScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer3"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="HBoxContainer/CreateFarmButton" to="." method="_on_create_farm_button_pressed"]
